New modular JS working Everything seems kinda working so far

--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
     <div class="menu-container"></div>
 
     <div class="ui-buttons">
-        <button class="ui-btn btn-top">Menu 2</button>
-        <button class="ui-btn btn-middle">Menu 4</button>
-        <button class="ui-btn btn-weird">Menu 3</button>
-        <button class="ui-btn btn-bottom">Back</button>
+        <button class="ui-btn btn-1">Menu 1</button>
+        <button class="ui-btn btn-2">Gallery</button>
+        <button class="ui-btn btn-back">Back</button>
     </div>
 </div>
 
-<script src="js/viewfinder.js"></script>
+<script type="module" src="js/viewfinder.js"></script>
 </body>
 </html>
