Simplified a maximum the UI Modular infoViewfinder Now still need to do the same for gallery. Everything seems working

--- a/viewfinder.html
+++ b/viewfinder.html
@@ -49,6 +49,7 @@
         <button class="ui-btn btn-1">Menu 1</button>
         <button class="ui-btn btn-2">Gallery</button>
         <button class="ui-btn btn-back">Back</button>
+        <button class="ui-btn btn-disp">Disp</button>
     </div>
 </div>
 
