All menus redirect perfectly All working except video details

--- a/menus/gallery.html
+++ b/menus/gallery.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camera Gallery</title>
-    <link rel="stylesheet" href="../css/gallery.css">
+    <link rel="stylesheet" href="/css/gallery.css">
 </head>
 <body>
 
 <div class="gallery-screen">
+    <div class="menu-container"></div>
+    <div class="ui-buttons">
+        <!--        <button class="ui-btn btn-1">Menu 1</button>-->
+        <button class="ui-btn btn-2">Gallery</button>
+        <button class="ui-btn btn-disp">Disp</button>
+        <button class="ui-btn btn-back">Back</button>
+    </div>
     <div class="gallery-title">My Media</div> <div class="gallery-grid">
     <div class="gallery-cell"
          data-src="../previews/preview1.JPG"
@@ -94,5 +101,7 @@
     </div>
 
 </div>
+
+<script src="/js/gallery.js"></script>
 </body>
 </html>
