--- a/viewfinder.html
+++ b/viewfinder.html
@@ -46,13 +46,13 @@
     <div class="menu-container"></div>
 
     <div class="ui-buttons">
-        <button class="ui-btn btn-1">Menu 1</button>
+<!--        <button class="ui-btn btn-1">Menu 1</button>-->
         <button class="ui-btn btn-2">Gallery</button>
-        <button class="ui-btn btn-back">Back</button>
         <button class="ui-btn btn-disp">Disp</button>
+        <button class="ui-btn btn-back">Back</button>
     </div>
 </div>
 
-<script type="module" src="js/viewfinder.js"></script>
+<script type="module" src="/js/viewfinder.js"></script>
 </body>
 </html>
